--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ng-kickstarter",
-  "version": "0.0.1",
+  "name": "@phelanma/ng-kickstarter",
+  "version": "0.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -11,7 +11,6 @@
     "e2e": "ng e2e",
     "pwa": "ng build --prod && sw-precache --root=dist --config=precache-config.js"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
